# DE-W7

./: Makefile  README.md  pyproject.toml  query_log.md  requirements.txt  test_main.py
.github/workflows/: test.yml
accel_data/: main.py
accel_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
accel_data/accel_data.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
accel_data/mylib/: transform_load.py
