[project]
name = "accel_data"
version = "0.0.1"
dependencies = [
    "requests",
    "sqlalchemy",
    "matplotlib",
    "pytest",
    'importlib-metadata; python_version<"3.10"',
]

[project.scripts]
accel_data = "accel_data.main:main"

[tool.setuptools.packages.find]
include = ["accel_data*", "accel_data.mylib"] 

